# auto-dm

./: .claudeignore  .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  DESIGN.md  Dockerfile  HISTORY.md  LICENSE  Makefile  PLAN.md  README.md  SPEC.md  config.example.json  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.js  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: backend-e2e.yml  frontend-quality.yml
data/phb/: LICENSE
data/phb/Characterizations/: Backgrounds.md
data/phb/Races/: Dwarf.md  Elf.md  Gnome.md  Halfling.md
data/world_tables/: README.md  weather.json
data/world_tables/encounters/: dungeon_level_1.json  dungeon_level_5.json  forest_day.json  forest_night.json  road_day.json  road_night.json
data/world_tables/loot/: hoard_high.json  hoard_low.json  hoard_mid.json  individual.json
src/auto_dm/: __init__.py  config.py  main.py
src/auto_dm/agents/: __init__.py  companion.py  companion_turn.py  dm.py  narrative.py  prompts.py  summarizer.py
src/auto_dm/character/: __init__.py  builder.py  level_up.py  spells.py
src/auto_dm/cli/: __init__.py  app.py  character_flow.py  rendering.py  setup.py
src/auto_dm/companions/: __init__.py  roster.py  selection.py
src/auto_dm/engine/: __init__.py  actions.py  adventuring.py  arcane_recovery.py  checks.py  class_features.py  combat.py  combat_engine.py  companion_reactions.py  conditions.py  cover.py  defenses.py  dice.py  effects.py  extra_attack.py  fighting_style.py  inventory.py  movement.py  progression.py  rage.py  reactions.py  resources.py  smite.py  sneak_attack.py  specialists.py  spell_effects.py  spellcasting.py  world.py
src/auto_dm/llm/: __init__.py  anthropic_provider.py  base.py  deepseek.py  errors.py  factory.py  gemini.py  minimax.py  openai_compatible.py  openai_provider.py  pricing.py  registry.py  usage.py  utils.py
src/auto_dm/persistence/: __init__.py  saves.py
src/auto_dm/phb/: __init__.py  loader.py  lookup.py  models.py  parser.py
src/auto_dm/state/: __init__.py  manager.py  models.py  monster_adapter.py
src/auto_dm/web/: __init__.py  activity.py  auth.py  config.py  crypto.py  db.py  design_system.html  limits.py  llm_context.py  models.py  preferences.py  rate_limit.py  redis_client.py  routes_admin.py  routes_auth.py  routes_game.py  routes_inventory.py  routes_llm.py  routes_preferences.py  routes_setup.py  routes_tts.py  save_metadata.py  server.py  sessions.py  sse.py  tts.py  usage.py
src/auto_dm/web/static/: app.js  index.html  shell.js  style.css
src/auto_dm/web/static/assets/: hero-party-dragon.avif
src/auto_dm/web/static/assets/icons/: LICENSE
src/auto_dm/web/static/css/: admin.css  base.css  components.css  game.css  landing.css  lobby.css  shell.css  tokens.css  utilities.css  wizard.css
tests/: test_adventuring.py  test_arcane_recovery.py  test_asi_queue_phase_38.py  test_backgrounds_tools_gear_phase_25c.py  test_character.py  test_character_flow.py  test_checks.py  test_cli.py  test_cli_phase_25h.py  test_cli_setup_narration.py  test_cli_setup_scenario.py  test_combat.py  test_combat_engine.py  test_combat_handlers_wave_b.py  test_combat_integration.py  test_combat_xp_phase_38.py  test_companion.py  test_companion_reactions_phase_41c.py  test_companions_selection.py  test_conditions_engine.py  test_config.py  test_cover_oa.py  test_cunning_action.py  test_defenses.py  test_dice.py  test_dm_agent.py  test_e2e_smoke.py  test_effects_engine.py  test_extra_attack.py  test_factory.py  test_fighting_style.py  test_inventory_phase_39.py  test_languages.py  test_llm_config_from_env.py  test_magic_items_phase_25d.py  test_monster_adapter.py  test_monster_loader.py  test_monster_lookup.py  test_movement_phase_25e.py  test_persistence.py  (+22 more)
tests/e2e/: accessibility.spec.js  conftest.py  fake_dm.py  fixtures.js  flows.spec.js  helpers.py  test_full_flow.py  visual.spec.js
tests/frontend/: check-asset-budgets.mjs
tests/llm/: test_adapters_contract.py  test_registry.py
tests/web/: __init__.py  conftest.py  test_admin_phase_49.py  test_admin_roles.py  test_admin_users.py  test_auth.py  test_companions_endpoint.py  test_crypto.py  test_design_system_phase_44.py  test_frontend_quality_phase_50.py  test_game_phase_48.py  test_inventory_routes_phase_39.py  test_llm_catalog.py  test_llm_credentials.py  test_llm_model_migration.py  test_llm_resolver.py  test_lobby_phase_46.py  test_opening.py  test_preferences_phase_42.py  test_reaction_endpoint_phase_41c.py  test_routes_byok.py  test_routes_game.py  test_sessions_byok.py  test_shell_phase_45.py  test_signup_invite.py  test_sse_stream.py  test_suggest_names.py  test_tts_phase_42.py  test_usage_limits.py  test_wizard.py  test_wizard_phase_47.py  test_xp_endpoints_phase_38.py
