[project]
name = "auto-dm"
version = "0.1.0"
description = "AI-powered solo D&D 5e game master"
requires-python = ">=3.11"
authors = [{ name = "Auto DM contributors" }]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "click>=8.1",
    "openai>=1.40.0",
    "httpx>=0.27",
    # Phase 26 — Web backend
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "redis>=5.0",
    "bcrypt>=4.0",
    "pyjwt>=2.8",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.0",
    # Phase 10 deps (other providers) — added when implemented
    # "anthropic>=0.40.0",
    # "google-generativeai>=0.8.0",
    # "langchain>=0.3.0",
    # "langgraph>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]

[project.scripts]
auto-dm = "auto_dm.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
