[project]
name = "auto-dm"
version = "0.1.0"
description = "AI-powered solo D&D 5e game master"
requires-python = ">=3.11"
authors = [{ name = "Auto DM contributors" }]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "openai>=1.40.0",
    "httpx>=0.27",
    # Phase 26 — Web backend
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "redis>=5.0",
    "bcrypt>=4.0",
    "pyjwt>=2.8",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.0",
    # Phase 42 — TTS narration. ⚠️ edge-tts is GPL-3.0: kept isolated in
    # ``auto_dm/web/tts.py`` (lazy import) so it can be extracted into a
    # sidecar if distribution licensing ever requires it.
    "edge-tts>=6.1,<7",
    # Phase 10 deps (other providers) — added when implemented
    # "anthropic>=0.40.0",
    # "google-generativeai>=0.8.0",
    # "langchain>=0.3.0",
    # "langgraph>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-anyio>=0.0.0",
    "pytest-xdist>=3.6",
    "pytest-cov>=4.1",
    "aiosqlite>=0.20",
    "fakeredis>=2.23",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = ["e2e: real HTTP + Postgres + Redis end-to-end tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
